--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ jwt.encryptor.password=password
 
 online.jasypt=https://www.devglan.com/online-tools/jasypt-online-encryption-decryption
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/db?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mariadb://localhost:3306/petstore?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=garellano
 spring.datasource.password=garellano
 spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
