--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
            <version>1.6.0</version>
         </dependency>
         <!-- Own custom libs -->
+        <dependency>
+            <groupId>io.kebblar</groupId>
+            <artifactId>tienda-front</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>        
      </dependencies>
 
 
