base de datos final
y llave agregada al properties: register.token.lasts=10

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ management.endpoint.health.show-details=always
 proyecto.message=ENC(uTSqb9grs1+vUv3iN8lItC0kl65lMG+8)
 # Minutos que vive el jwt
 security.token.lasts=30
+register.token.lasts=10
+
 logging.file.name=log/proyecto.log
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter: ERROR
 
