Correcion al endpoint infoComprado

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,7 +32,7 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 jasypt.encryptor.password=password
 online.jasypt=https://www.devglan.com/online-tools/jasypt-online-encryption-decryption
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/ejemplo4?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mariadb://localhost:3307/tarea?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=garellano
 spring.datasource.password=garellano
 spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
