--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
+        
+        <dependency>
+  <groupId>org.mybatis</groupId>
+  <artifactId>mybatis-typehandlers-jsr310</artifactId>
+  <version>1.0.0</version>
+</dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
